--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "format": "prettier src/**/*.{ts,tsx} --write",
     "lint": "eslint --max-warnings 0",
     "lint:fix": "eslint --max-warnings 0 --fix",
-    "dev": "vite",
+     "dev": "vite --port 5173",
     "storybook": "storybook dev -p 6006",
     "storybook:setup": "node node_modules/@storybook/addon-styling/bin/postinstall.js",
     "storybook:build": "storybook build",
@@ -51,6 +51,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "shx": "^0.3.4",
+    "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vitest": "^2.1.1",
